<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="hello">Hello World, ffmList!</string>
	<string name="app_name">NameCard</string>
	<string name="user_label">FunForMobile</string>
	<string name="upload">Upload</string>
	<string name="form_image_label">Image</string>
	<string name="form_save_label">Save</string>
	<string name="form_clearFields_label">Clear</string>
	<string name="form_bgcolor_label">Background color:</string>
	<string name="form_textcolor_label">Text color:</string>
	<string name="form_textfont_label">Choose a text font:</string>
	<string name="bgcolor_prompt">Choose a background color</string>
	<string name="textcolor_prompt">Choose a text color</string>
	<string-array name="color_array">
		<item>White</item>
		<item>Red</item>
		<item>Gray</item>
		<item>Yellow</item>
		<item>Green</item>
		<item>Blue</item>
		<item>Magenta</item>
		<item>Black</item>
		<item>Cyan</item>
	</string-array>
	<string name="form_category_label">Choose a category</string>
	<string-array name="category_array">
		<item>Unassigned</item>
		<item>Business</item>
		<item>Church</item>
		<item>College</item>
		<item>Community</item>
		<item>Co-workers</item>
		<item>Family</item>
		<item>Friends</item>
		<item>High School</item>
		<item>Personal</item>
		<item>Relatives</item>
	</string-array>
	<string-array name="category_array1">
		<item>All</item>
		<item>Business</item>
		<item>Church</item>
		<item>College</item>
		<item>Community</item>
		<item>Co-workers</item>
		<item>Family</item>
		<item>Friends</item>
		<item>High School</item>
		<item>Personal</item>
		<item>Relatives</item>
	</string-array>
	<string-array name="contacts_longclick_array">
		<item>View Contact</item>
		<item>Delete Contact</item>
		<item>Save to Phone Contacts</item>
	</string-array>
	<string-array name="share_array">
		<item>SMS</item>
		<item>Email</item>
		<item>Bluetooth</item>
	</string-array>
	<string-array name="contact_more_array">
		<item>Change Category</item>
		<item>Delete Contact</item>
		<item>Save to Phone Contacts</item>
		<item>Export as VCF</item>
	</string-array>
	<string name="textfont_prompt">Choose a text font</string>
	<string-array name="textfont_array">
		<item>Droid Sans</item>
		<item>Droid Mono</item>
		<item>Droid Serif</item>
	</string-array>
	<string name="title_NameCard_label">NameCard</string>
	<string name="title_createnewcard_label">Create New Card</string>
	<string name="title_mycards_label">My Cards</string>
	<string name="title_contacts_label">Contacts</string>
	<string name="title_newcontacts_label">New Contacts</string>
	<string name="title_recovercards_label">Recover My Cards</string>
	<string name="title_login_label">Login</string>
	<string name="mycard_edit_label">Edit</string>
	<string name="mycard_delete_label">Delete</string>
	<string name="mycard_send_label">Send</string>
	<string name="mycard_category_label">Category</string>
	<string name="form_update_label">Update</string>
	<string name="login_phone_num_label">Phone Number</string>
	<string name="upload_dlg_title">Upload</string>
	<string name="upload_dlg_title_pix">Upload Photo</string>
	<string name="upload_dlg_title_video">Upload Video</string>
	<string name="upload_dlg_title_tone">Upload Ringtone</string>
	<string name="upload_name_label">Title:</string>
	<string name="upload_button_go">Upload</string>
	<string name="upload_button_cancel">Cancel</string>
	<string name="upload_type_label">Type:</string>
	<string name="upload_category_label">Category:</string>
	<string name="what_to_do_with_ringtone">Make this your default ringtone or assign it to a
		contact?</string>
	<string name="make_default_ringtone_button">Make Default</string>
	<string name="choose_contact_ringtone_button">Assign to Contact</string>
	<string name="do_nothing_with_ringtone_button">Close</string>
	<string name="default_ringtone_success_message">Changed default ringtone</string>
	<string name="choose_contact_title">Assign ringtone to which contact?</string>
	<string name="success_contact_ringtone">Successfully assigned ringtone to:</string>
	<string name="alert_title_success">Saved</string>
	<string name="sms_title">Share By SMS</string>
	<string name="choose_mobile_title">Share By SMS</string>
	<string name="mobile_number_label">Enter a number to share</string>
	<string name="pick_mobile_button">Pick From Contacts</string>
	<string name="shut_button">Take Picture</string>
	<string name="context_menu_play">Play</string>
	<string name="context_menu_default">Set As Default</string>
	<string name="context_menu_pick">Pick</string>
	<string name="context_menu_contact">Set For Contact</string>
	<string name="context_menu_upload">Upload</string>
	<string name="context_menu_delete">Delete</string>
	<string name="confirm_delete_ringtone">Are you sure?</string>
	<string name="context_menu_close">Close</string>
	<string name="delete_ringtone">Delete Ringtone</string>
	<string name="delete_alarm">Delete Alarm</string>
	<string name="delete_notification">Delete Notification</string>
	<string name="delete_music">Delete Music</string>
	<string name="delete_audio">Delete Audio</string>
	<string name="delete_ok_button">Delete</string>
	<string name="delete_cancel_button">Cancel</string>
	<string name="share_ok_button">Share</string>
	<string name="share_cancel_button">Not now</string>
	<string name="delete_failed">Unable to delete file</string>
	<string name="alert_title_failure">Error</string>
	<string name="alert_ok_button">OK</string>
	<string name="alert_yes_button">Yes, please!</string>
	<string name="alert_no_button">No, thanks.</string>
	<string name="login_email_label">Email</string>
	<string name="login_password_label">Password</string>
	<string name="login_button_cancel">Cancel</string>
	<string name="signup_free_label">Sign Up Free</string>
	<string name="login_button_go">Go</string>
	<string name="signup_email_label">Email</string>
	<string name="signup_password_label">Password</string>
	<string name="signup_phone_number">Phone Number (Login ID)</string>
	<string name="signup_username_label">Screen Name (Min 4 chars)</string>
	<string name="signup_privacy_label">By submitting this form,you confirm you are 13
		years
		of age or older and agree to the NameCard Terms of Service and
		Privacy
		Policy. NameCard will not sell or share your email address.
		Personal information will be kept private and confidential.</string>
	<string name="signup_submit_go">Submit</string>
	<string name="me">Me</string>
	<string name="new_message">New message</string>
	<string name="create_new_message">Compose new message</string>
	<string name="messaging_label">Messaging</string>
	<string name="menu_view_contact">View contact</string>
	<string name="menu_add_to_contacts">Add to Contacts</string>
	<string name="menu_go_home">Home</string>
	<string name="menu_delete_messages">Delete messages</string>
	<string name="confirm_delete_all_conversations">All threads will be deleted.</string>
	<string name="confirm_delete_conversation">The entire thread will be deleted.</string>
	<string name="confirm_dialog_title">Delete</string>
	<string name="delete">Delete</string>
	<string name="no">Cancel</string>
	<string name="has_draft">Draft</string>
	<string name="delete_unlocked">Delete locked messages</string>
	<string name="menu_delete">Delete thread</string>
	<string name="menu_view">View thread</string>
	<string name="menu_preferences">Settings</string>
	<string name="menu_delete_all">Delete threads</string>
	<string name="menu_compose_new">Compose</string>
	<string name="refreshing">Refreshing\u2026</string>
	<string name="no_subject_view">(No subject)</string>
	<string name="hidden_sender_address">Hidden sender address</string>
	<string name="message_download_failed_title">Message not downloaded</string>
	<string name="message_send_failed_title">Message not sent</string>
	<string name="message_failed_body">Select to review the message and try again.</string>
	<string translatable="false" name="prefDefault_vibrateWhen">never</string>
	<string translatable="false" name="prefDefault_vibrate_true">always</string>
	<string translatable="false" name="prefDefault_vibrate_false">never</string>
	<string name="delivery_toast_body">Message received by %s</string>
	<string name="notification_multiple">
		<xliff:g id="count">%s</xliff:g>
		unread messages.
	</string>
	<string name="notification_multiple_title">New messages</string>
	<string name="notification_failed_multiple">
		<xliff:g id="count">%s</xliff:g>
		messages could not be sent.
	</string>
	<string name="notification_failed_multiple_title">Messages not sent</string>
	<string name="preferences_title">"Settings"</string>
	<string name="restore_default">"Restore default settings"</string>
	<string name="pref_popup_settings_title">Pop up settings</string>
	<string name="pref_notification_settings_title">Notification settings</string>
	<string name="pref_mms_settings_title">"Multimedia message (MMS) settings"</string>
	<string name="pref_sms_settings_title">"Text message (SMS) settings"</string>
	<string name="pref_sms_storage_title">Storage settings</string>
	<string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
	<string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
	<string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
	<string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
	<string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
	<string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
	<string name="pref_title_mms_delivery_reports">Delivery reports</string>
	<string name="pref_title_mms_read_reports">Read reports</string>
	<string name="pref_title_sms_delivery_reports">Delivery reports</string>
	<string name="pref_title_auto_delete">Delete old messages</string>
	<string name="pref_title_sms_delete">Text message limit</string>
	<string name="pref_title_mms_delete">Multimedia message limit</string>
	<string name="pref_title_popup_enabled">Pop ups (all contacts) </string>
	<string name="pref_summary_popup_enabled">Show pop ups for all contacts </string>
	<string name="pref_title_notification_enabled">Notifications</string>
	<string name="pref_summary_notification_enabled">Display message notifications in status bar</string>
	<string name="pref_title_notification_vibrateWhen">Vibrate</string>
	<string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
	<string name="pref_title_notification_ringtone">Select ringtone</string>
	<string name="pref_messages_to_save">Set number of messages to save</string>
	<string name="prefDialogTitle_vibrateWhen">Vibrate</string>
	<string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
	<string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
	<string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
	<string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
	<string-array name="prefEntries_vibrateWhen">
		
		<item>Always</item>
		
		<item>Only when silent</item>
		
		<item>Never</item>
	</string-array>
	<string-array translatable="false" name="prefValues_vibrateWhen">
		<item>always</item>
		<item>silent</item>
		<item>never</item>
	</string-array>
	<string name="pref_summary_delete_limit">
		<xliff:g id="count">%1$s</xliff:g>
		messages per conversation
	</string>
	<string name="set">Set</string>
	<string name="confirm">Confirm</string>
	<string name="message_send_read_report">A read report will be sent.</string>
	<string name="yes">OK</string>
	<string name="dl_expired_notification">This message has expired and will be deleted.</string>
	<string name="no_subject">(No subject)</string>
	<string name="unknown_sender">Unknown sender</string>
</resources>