<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<RelativeLayout android:background="#FF006699"
		android:focusable="true" android:focusableInTouchMode="true"
		android:id="@+id/titleTitleBar" android:orientation="horizontal"
		android:layout_alignParentTop="true" android:layout_height="46dp"
		android:gravity="center_horizontal|center_vertical"
		android:layout_gravity="center_horizontal|center_vertical"
		android:layout_width="fill_parent">
		<TextView android:id="@+id/titleTitle" android:textColor="#fff0f0f0"
			android:textStyle="bold" android:textSize="25dp"
			android:layout_weight="1" android:layout_height="wrap_content"
			android:shadowColor="#202020" android:shadowDy="2.0"
			android:shadowDx="2.0" android:shadowRadius="2.5"
			android:layout_centerHorizontal="true" android:layout_width="fill_parent"
			android:gravity="center_horizontal" android:layout_gravity="center_horizontal" />
	</RelativeLayout>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginBottom="10dip"
			android:layout_marginRight="10dip" android:orientation="vertical">
			<TextView android:text="@string/signup_phone_number"
				android:textColor="#ffffffff" android:textSize="15sp"
				android:layout_marginLeft="15dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<EditText android:id="@+id/signup_phone_number"
				android:inputType="phone" android:layout_marginLeft="10dip"
				android:maxLines="1" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<TextView android:text="@string/signup_username_label"
				android:textColor="#ffffffff" android:textSize="15sp"
				android:layout_marginLeft="15dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<EditText android:id="@+id/signup_username"
				android:maxLines="1" android:layout_marginLeft="10dip"
				android:singleLine="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<TextView android:text="@string/signup_password_label"
				android:textColor="#ffffffff" android:textSize="15sp"
				android:layout_marginLeft="15dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<EditText android:id="@+id/signup_password"
				android:singleLine="true" android:maxLines="1" android:inputType="textPassword"
				android:layout_marginLeft="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<TextView android:text="Confirm Password" android:textColor="#ffffffff"
				android:textSize="15sp" android:layout_marginLeft="15dip"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<EditText android:id="@+id/signup_password_confirm"
				android:singleLine="true" android:maxLines="1" android:inputType="textPassword"
				android:layout_marginLeft="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<TextView android:text="@string/signup_email_label"
				android:textColor="#ffffffff" android:textSize="15sp"
				android:layout_marginLeft="15dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<EditText android:id="@+id/signup_email" android:inputType="textEmailAddress"
				android:maxLines="1" android:singleLine="true"
				android:layout_marginLeft="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<TextView android:text="@string/signup_privacy_label"
				android:textColor="#ffffffff" android:textSize="15sp"
				android:layout_marginLeft="15dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<Button android:id="@+id/signup_submit" android:text="@string/signup_submit_go"
				android:layout_width="300sp" android:layout_height="wrap_content"
				android:textSize="18sp" android:textColor="#FFFFFF"
				android:textStyle="bold" android:layout_marginTop="15dip"
				android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
				android:gravity="center_horizontal" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>

