<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:layout_marginBottom="10dip" android:orientation="vertical">
	<LinearLayout android:background="#006699"
		android:focusable="true" android:focusableInTouchMode="true"
		android:gravity="center_horizontal|center_vertical"
		android:layout_gravity="center_horizontal|center_vertical" android:id="@+id/loginTitleBar"
		android:orientation="horizontal" android:layout_alignParentTop="true"
		android:layout_height="46dp" android:layout_width="fill_parent">
		<TextView android:id="@+id/loginTitle" android:textColor="#fff0f0f0"
			android:textStyle="bold" android:textSize="25dp"
			android:layout_weight="1" android:layout_height="wrap_content"
			android:shadowColor="#202020" android:shadowDy="2.0"
			android:shadowDx="2.0" android:shadowRadius="2.5"
			android:layout_width="fill_parent" android:gravity="center_horizontal|center_vertical"
			android:layout_gravity="center_horizontal|center_vertical">
		</TextView>
	</LinearLayout>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_marginBottom="10dip" android:orientation="vertical">
			<TextView android:text="@string/login_phone_num_label"
				android:layout_marginTop="10dip" android:textSize="18dp"
				android:textColor="#FFFFFF" android:layout_marginLeft="10dip"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<EditText android:id="@+id/login_phonenum" android:textSize="18dp"
				android:inputType="phone" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<TextView android:text="@string/login_password_label"
				android:textSize="18dp" android:textColor="#FFFFFF"
				android:layout_marginLeft="10dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<EditText android:id="@+id/login_password" android:textSize="18dp"
				android:inputType="textPassword" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<LinearLayout android:layout_marginTop="5dip"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center_horizontal">

				<Button android:id="@+id/login_go" android:text="@string/login_button_go"
					android:textSize="18dp" android:layout_width="100sp"
					android:layout_height="wrap_content" android:layout_marginBottom="10dip" />

				<Button android:id="@+id/login_cancel" android:text="@string/login_button_cancel"
					android:textSize="18dp" android:layout_width="100sp"
					android:layout_height="wrap_content" android:layout_marginBottom="10dip" />
			</LinearLayout>

			<Button android:id="@+id/signup_free" android:text="@string/signup_free_label"
				android:textSize="18dp" android:layout_width="fill_parent"
				android:textColor="#FFFFFF" android:textStyle="bold"
				android:layout_height="wrap_content" android:layout_marginTop="100dip"
				android:layout_marginBottom="10dip" android:gravity="center_horizontal"
				android:layout_gravity="center_horizontal" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
